# ledgerfs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/ledgerfs-core/: Cargo.toml
crates/ledgerfs-core/src/: commands.rs  errors.rs  events.rs  lib.rs  traits.rs  types.rs
crates/ledgerfs-event-store/: Cargo.toml
crates/ledgerfs-event-store/src/: batch.rs  config.rs  lib.rs  recovery.rs  serialization.rs  serialization_tests.rs  store.rs
crates/ledgerfs-fuse/: Cargo.toml
crates/ledgerfs-fuse/src/: filesystem.rs  lib.rs  mount.rs  path_resolver.rs
scripts/: prd.txt  prd_focused.txt
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json
