[workspace]
members = [
    "crates/ledgerfs-core",
    "crates/ledgerfs-fuse",
    "crates/ledgerfs-event-store",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LedgerFS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ledgerfs/ledgerfs"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async and concurrency
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"

# Cryptography
sha2 = "0.10"
ring = "0.17"
hex = "0.4"

# Storage and databases
rocksdb = "0.21"
sled = "0.34"

# Networking and API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# FUSE
fuser = "0.14"
libc = "0.2"

# Event streaming
rdkafka = "0.36"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
proptest = "1.0"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true