[package]
name = "ledgerfs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true