[package]
name = "ledgerfs-event-store"
version = "0.1.0"
edition = "2021"

[dependencies]
ledgerfs-core = { path = "../ledgerfs-core" }

# LSM Tree backend
rocksdb = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

# Performance and compression
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3.8"