[package]
name = "ledgerfs-fuse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ledgerfs-core = { path = "../ledgerfs-core" }
fuser.workspace = true
libc.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
parking_lot.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true